--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
                 <p>Preencha os dados abaixo e nossa equipe técnica entrará em contato via Telegram ou E-mail.</p>
             </div>
             
-            <form id="tg-form" class="contact-form">
+            <form method="POST" id="tg-form" class="contact-form">
                 <div class="input-group">
                     <label for="nome">Nome Completo</label>
                     <input type="text" id="nome" name="nome" placeholder="Ex: João Silva" required>
